# AI-App

./: changes.diff
CleanSphere Pro/: CMakeLists.txt  CMakePresets.json
CleanSphere Pro/src/Core/: CMakeLists.txt
CleanSphere Pro/src/Core/Platform/: ErrorCodes.h  FileSystem.cpp  FileSystem.h  Privilege.cpp  Privilege.h  Registry.cpp  Registry.h  SystemInfo.h  Win32Wrappers.cpp  Win32Wrappers.h
house_price_prediction/: README.md  mlflow.db  requirements.txt
house_price_prediction/api/: app.py
house_price_prediction/app/: ui.py
house_price_prediction/data/: dataset.csv
house_price_prediction/docs/: architecture.md  presentation.md
house_price_prediction/mlruns/1/models/m-5e96372d69914f7dab365f7b48bb2d0c/artifacts/: MLmodel
house_price_prediction/n8n/: workflow.json
house_price_prediction/src/: data_generator.py  train.py
intelligent_dedup/: .coverage  CHANGELOG.md  FEATURES.md  automate_test_docs.py  cli.py  coverage_final.txt  coverage_final_check.txt  coverage_final_check_v2.txt  coverage_final_check_v3.txt  coverage_final_check_v4.txt  coverage_final_check_with_ui.txt  coverage_final_v2.txt  coverage_new.txt  coverage_report.txt  coverage_report_2026-03-28_10-55-14.txt  coverage_report_latest.txt  coverage_sum.txt  coverage_ui_win.txt  coverage_ultimate.txt  coverage_ultimate_v2.txt  ext_failures.txt  extract_test_docs.py  failures.txt  generate_coverage_dashboard.py  main.py  migrate_legacy.py  requirements.txt  run.bat  run.ps1  run_tests.bat  run_tests.ps1  serve_dashboard.py  show_coverage.py  test_output.txt  test_output2.txt
intelligent_dedup/app/agents/: reasoning_engine.py  retention_agent.py
intelligent_dedup/app/engine/: deduplicator.py  hasher.py  scanner.py
intelligent_dedup/app/ml/: embedder.py  vector_index.py
intelligent_dedup/app/models/: database.py  repository.py
intelligent_dedup/app/viewmodels/: results_viewmodel.py  scan_viewmodel.py
intelligent_dedup/app/views/: main_window.py  theme_manager.py
intelligent_dedup/app/views/dialogs/: load_session_dialog.py  stats_dialog.py
intelligent_dedup/coverage_history/: index.html
intelligent_dedup/coverage_history/2026-03-28_11-03-13/: coverage.json  junit.xml  meta.json  test_details.html
intelligent_dedup/coverage_history/2026-03-28_11-05-22/: coverage.json  junit.xml  meta.json  test_details.html
intelligent_dedup/coverage_history/2026-03-28_11-19-28/: coverage.json  junit.xml  meta.json  test_details.html
intelligent_dedup/coverage_history/2026-03-28_11-23-04/: coverage.json  junit.xml  meta.json  test_details.html
intelligent_dedup/coverage_history/2026-03-28_11-23-34/: coverage.json  junit.xml  meta.json  test_details.html
intelligent_dedup/coverage_history/2026-03-28_11-27-15/: coverage.json  junit.xml  meta.json  test_details.html
intelligent_dedup/coverage_history/2026-03-28_11-55-45/: coverage.json  junit.xml  meta.json  test_details.html
intelligent_dedup/coverage_history/2026-03-28_12-49-05/: coverage.json  junit.xml  meta.json  test_details.html
intelligent_dedup/coverage_history/2026-03-28_12-49-51/: coverage.json  junit.xml  meta.json  test_details.html
intelligent_dedup/coverage_history/2026-03-28_13-29-43/: coverage.json  junit.xml  meta.json  test_details.html
intelligent_dedup/coverage_history/2026-03-28_13-35-56/: coverage.json  junit.xml  meta.json  test_details.html
intelligent_dedup/coverage_history/2026-03-28_13-39-27/: coverage.json  junit.xml  meta.json  test_details.html
intelligent_dedup/coverage_history/2026-03-28_13-40-07/: coverage.json  junit.xml  meta.json  test_details.html
intelligent_dedup/coverage_history/2026-03-28_13-51-20/: coverage.json  junit.xml  meta.json  test_details.html
intelligent_dedup/coverage_history/2026-03-28_13-52-34/: coverage.json  junit.xml  meta.json  test_details.html
intelligent_dedup/coverage_history/2026-03-28_13-52-45/: coverage.json  junit.xml  meta.json  test_details.html
intelligent_dedup/docs/: ARCHITECTURE.md  SETUP.md
intelligent_dedup/rust_core/: Cargo.toml
intelligent_dedup/rust_core/src/: lib.rs
intelligent_dedup/tests/: test_agents.py  test_cli.py  test_cli_extended.py  test_database_impact.py  test_dialogs.py  test_dialogs_impact.py  test_engine.py  test_engine_extended.py  test_main_window.py  test_main_window_extended.py  test_main_window_impact.py  test_ml.py  test_models.py  test_ui.py  test_ui_utils.py  test_viewmodels.py  test_viewmodels_extended.py
