[package]
name = "rust_core"
version = "0.1.0"
edition = "2021"
description = "High-performance file scanner and hasher for Intelligent Duplicate Finder"

[lib]
name = "rust_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
rayon = "1.10"
walkdir = "2.5"
sha2 = "0.10"
md-5 = "0.10"
memmap2 = "0.9"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
